<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.sal.disco.unimib.progettodispositivimobili">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icone"
        android:title="@string/title_home"
        android:orderInCategory="1" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/baseline_star_rate_24"
        android:title="@string/title_category"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/navigation_ricerca"
        android:icon="@drawable/ricerca_icone"
        android:title="@string/title_ricerca"
        android:orderInCategory="3" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icone"
        android:title="@string/title_profile"
        android:orderInCategory="4"/>


</menu>