<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.sal.disco.unimib.progettodispositivimobili">

    <item
        android:id="@+id/navigation_admin_home"
        android:icon="@drawable/baseline_home_24_white"
        android:title="@string/title_home"
        android:orderInCategory="1" />

    <item
        android:id="@+id/navigation_category_admin"
        android:icon="@drawable/baseline_star_rate_24_white"
        android:title="@string/title_category"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/navigation_ricerca"
        android:icon="@drawable/baseline_search_24_white"
        android:title="@string/title_ricerca"
        android:orderInCategory="3" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24_white"
        android:title="@string/title_profile"
        android:orderInCategory="4"/>


</menu>