<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

<com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/top_appbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/dark_red"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="@id/guideline_right"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:title="Horizon Tales"
    app:titleTextColor="@color/white" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_begin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="78dp" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_right"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_end="16dp" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_left"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="16dp" />

<ImageView
    android:id="@+id/imageView_icon"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layout_constraintEnd_toEndOf="@id/guideline_right"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintTop_toBottomOf="@+id/guideline_begin"
    app:srcCompat="@drawable/ic_android_black_24dp" />

<TextView
    android:id="@+id/txt_forgot_pw"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:text="@string/txt_forgot_pw"
    android:textSize="32sp"
    android:textStyle="bold"
    app:layout_constraintStart_toEndOf="@id/guideline_right"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintTop_toBottomOf="@id/imageView_icon" />

<TextView
    android:id="@+id/txt_domanda_forgot_pw"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:text="@string/txt_domanda_forgot_pw"
    android:textSize="16sp"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layout_constraintStart_toEndOf="@id/guideline_right"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintTop_toBottomOf="@id/txt_forgot_pw" />


<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/text_input_layout_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    app:boxBackgroundColor="?android:attr/panelBackground"
    app:layout_constraintEnd_toEndOf="@id/guideline_right"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintTop_toBottomOf="@id/txt_domanda_forgot_pw"
    app:startIconDrawable="@drawable/baseline_alternate_email_24"
    app:endIconMode="clear_text"

    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
</com.google.android.material.textfield.TextInputLayout>

<TextView
    android:id="@+id/txt_ripristina_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:text="@string/txt_ripristina_password"
    android:textSize="16sp"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"

    app:layout_constraintStart_toEndOf="@id/guideline_right"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintTop_toBottomOf="@id/text_input_layout_email" />

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btn_ripristina_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/btn_ripristina_password"
    android:background="@drawable/round_btn"
    android:textSize="18sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:textAllCaps="false"
    app:layout_constraintEnd_toStartOf="@id/guideline_right"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintTop_toBottomOf="@id/txt_ripristina_password"
    />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layout_constraintTop_toBottomOf="@id/btn_ripristina_password"
    app:layout_constraintStart_toEndOf="@id/guideline_left"
    app:layout_constraintEnd_toStartOf="@id/guideline_right">

    <TextView
        android:id="@+id/txt_domanda_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_domanda_back"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/txt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/txt_back"
        android:textAllCaps="false"
        android:textColor="@color/dark_red"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_end"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>